# MADM-v1

./: .gitignore  README.md  pyproject.toml  ~$실험(통합).xlsx
01_group_A/: README.md  main.py  prd_trd.md  requirements.txt
01_group_A/agents/: __init__.py  base_agent.py  budget_a202.py  chef_a301.py  chef_a302.py  chef_a303.py  chef_a311.py  chef_a312.py  chef_a313.py  health_a201.py  orchestrator_a001.py  planner_a101.py
01_group_A/data/: result.json
01_group_A/rag_docs/: price_table.csv
01_group_A/tools/: __init__.py  nutrition_tool.py  price_tool.py  rag_tool.py
02_group_B/: README.md  agent_prompt.md  groupb.md  main.py  memory_manager.py  prd_trd.md  requirements.txt
02_group_B/agents/: __init__.py  base_agent.py  budget_a202.py  chef_a301.py  chef_a302.py  chef_a303.py  chef_a311.py  chef_a312.py  chef_a313.py  health_a201.py  mediator_a101.py  orchestrator_a001.py
02_group_B/config/: access_control.json  priority_matrix.json  racid_matrix.json
02_group_B/data/: result.json
02_group_B/rag_docs/: nutrition_guide.md  recipes_cn.json  recipes_jp.json  recipes_ko.json
02_group_B/tools/: __init__.py  nutrition_tool.py  price_tool.py  rag_tool.py
03_(참고)mad-m(example)/: .gitignore  SETUP.md  main.py  readme.md  requirements.txt
03_(참고)mad-m(example)/agents/: __init__.py  base_agent.py
03_(참고)mad-m(example)/config/: config.yaml
03_(참고)mad-m(example)/memory/: __init__.py  memory_manager.py  vector_db.py
03_(참고)mad-m(example)/tools/: __init__.py  nutrition_api.py  price_api.py
04_결과/: 그룹별 응답 결과.xlsx  그룹별 평가 결과.xlsx  실험(통합).xlsx
(+19 files in other folders)
