[project]
name = "madm_v1"
version = "0.1.0"
description = "MADM_v1 research workspace"
readme = "README.md"
requires-python = ">=3.10"
authors = [ { name = "Research Team" } ]

dependencies = [
  "google-generativeai>=0.8.0",
  "python-dotenv>=1.0.1",
  "pydantic>=2.6.0",
  "typing-extensions>=4.9.0",
  "tabulate>=0.9.0",
  "numpy>=1.24.0",
  "pyyaml>=6.0",
  "requests>=2.31.0",
  "cryptography>=3.4.8",
]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
exclude = ["tests*"]
